--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -1,10 +1,22 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Page not found</h1>
+<section class="row justify-content-center">
+    <h1>Hep là, qui va là !</h1>
 
     <p>
-        The requested page couldn't be located. Checkout for any URL
-        misspelling or <a href="{{ path('back_back_menu') }}">return to the homepage</a>.
+        <h2>
+            Non non non, on n'a rien à faire ici !
+        </h2>
     </p>
+    <p>
+    <img src="https://64.media.tumblr.com/682df6a865a20e13e352b139777630ca/tumblr_nkj88cnVm51tvgytqo1_400.gif">
+    </p>
+    <p>
+        On fait demi-tour et on retourne sur <a href="{{ path('back_back_menu') }}">la page d'accueil</a>.
+    </p>
+    <p>
+        <img src="https://c.tenor.com/CHc8ytYtkWsAAAAd/vw-lupo-volkswagen-lupo.gif"
+    </p>
+</section>
 {% endblock %}
