--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
         <a href="{{ path('menu') }}"><img class="navbar-brand flex-start mh-100 p-3" style="width: 150px; height: 150px;" src="{{ asset('images/logo.png') }}" alt=""></a>
         <ul class="nav container justify-content-end">
             <li class="nav-item">
-                <a class="nav-link" href="#">Accès ResTokyo</a>
+                <a class="nav-link" href="https://restokyo.surge.sh">Accès ResTokyo</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('back_district_index') }}">Quartiers</a>
